# 2D_SDL_Game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  game
include/: AssetManager.h  Component.h  Constants.h  Constants.hpp  Engine.h  Entity.h  EntityManager.h  Game.h
include/Components/: ControlComponent.h  SpriteComponent.h  TransformComponent.h
lib/lua/: sol.hpp
src/: AssetManager.cc  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Component.h  Constants.h  Entity.cc  Entity.cpp  Entity.h  EntityManager.cc  EntityManager.cpp  EntityManager.h  Game.cc  Game.cpp  Game.h  Main.cpp  TextureManager.cc  TextureManager.cpp  TextureManager.h
src/Components/: SpriteComponent.h  Transform.h  TransformComponent.h
